force-app/main/default/objects/Visite__c/Visite__c.object-meta.xml
<CustomObject>
    <description>Les visites medicales</description>
    <label>Visite</label>
    <nameField>
        <label>Visite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>