force-app/main/default/objects/Visite__c/fields/Date_Visite__c.field-meta.xml
<CustomField>
    <fullName>Date_Visite__c</fullName>
    <label>Date Visite</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>