force-app/main/default/objects/Visite__c/fields/Medecin__c.field-meta.xml
<CustomField>
    <fullName>Medecin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medecin</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Categorie__c</field>
            <operation>equals</operation>
            <value>Medecin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Consultations</relationshipName>
    <type>Lookup</type>
</CustomField>