force-app/main/default/objects/Visite__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Categorie__c</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visites</relationshipLabel>
    <relationshipName>Visites</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>