force-app/main/default/objects/Visite__c/fields/Related_Visite__c.field-meta.xml
<CustomField>
    <fullName>Related_Visite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Visite</label>
    <referenceTo>Visite__c</referenceTo>
    <relationshipLabel>Visites</relationshipLabel>
    <relationshipName>Visites</relationshipName>
    <type>Lookup</type>
</CustomField>