force-app/main/default/objects/Visite__c/fields/Specialite__c.field-meta.xml
<CustomField>
    <fullName>Specialite__c</fullName>
    <formula>TEXT(Medecin__r.Specialite__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialite</label>
    <type>Text</type>
</CustomField>