force-app/main/default/objects/Visite__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A programmer</fullName>
                <default>true</default>
                <label>A programmer</label>
            </value>
            <value>
                <fullName>Rendez-vous pris</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>