force-app/main/default/objects/Visite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Visite__c</columns>
    <columns>Medecin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>